--- a/app/src/main/res/layout/activity_game_activity3x3.xml
+++ b/app/src/main/res/layout/activity_game_activity3x3.xml
@@ -4,7 +4,263 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GameActivity3x3"
-    android:background="@drawable/background1">
+    android:background="@drawable/background1"
+    >
+
+    <ImageView
+        android:id="@+id/goBackbtn"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/go_back_btn_back"
+        android:paddingStart="10dp"
+        android:src="@drawable/ic_baseline_arrow_back_ios_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/textColor" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/go_back_btn_back"
+        app:layout_constraintBottom_toBottomOf="@+id/goBackbtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.686"
+        app:layout_constraintStart_toStartOf="@+id/goBackbtn"
+        app:layout_constraintTop_toTopOf="@+id/goBackbtn">
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_medium"
+                android:text="Moves: "
+                android:textColor="@color/textColor"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/movesTv3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_medium"
+                android:text="0"
+                android:textColor="@color/textColor"
+                android:textSize="20dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_medium"
+                android:text="Time: "
+                android:textColor="@color/textColor"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/timeTv3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="2dp"
+                android:fontFamily="@font/poppins_medium"
+                android:text="0:00"
+                android:textColor="@color/textColor"
+                android:textSize="20dp" />
+
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/recordTV3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_medium"
+        android:text="Best Record:"
+        android:textColor="@color/textColor"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <GridLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <Button
+            android:id="@+id/btn1"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_marginEnd="10dp"
+            android:elevation="5dp"
+            android:fontFamily="@font/poppins_medium"
+            android:onClick="btnClick"
+            android:tag="00"
+            android:text="1"
+            android:textColor="@color/textColor"
+            android:textSize="45sp" />
+
+        <Button
+            android:id="@+id/btn2"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:elevation="5dp"
+            android:fontFamily="@font/poppins_medium"
+            android:onClick="btnClick"
+            android:tag="01"
+            android:text="2"
+            android:textColor="@color/textColor"
+            android:textSize="45sp" />
+
+        <Button
+            android:id="@+id/btn3"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_row="0"
+            android:layout_column="2"
+            android:layout_marginStart="10dp"
+            android:elevation="5dp"
+            android:fontFamily="@font/poppins_medium"
+            android:onClick="btnClick"
+            android:tag="02"
+            android:text="3"
+            android:textColor="@color/textColor"
+            android:textSize="45sp" />
+
+        <Button
+            android:id="@+id/btn4"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:layout_marginEnd="10dp"
+            android:elevation="5dp"
+            android:fontFamily="@font/poppins_medium"
+            android:onClick="btnClick"
+            android:tag="10"
+            android:text="4"
+            android:textColor="@color/textColor"
+            android:textSize="45sp" />
+
+        <Button
+            android:id="@+id/btn5"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_row="1"
+            android:layout_column="1"
+            android:elevation="5dp"
+            android:fontFamily="@font/poppins_medium"
+            android:onClick="btnClick"
+            android:tag="11"
+            android:text="5"
+            android:textColor="@color/textColor"
+            android:textSize="45sp" />
+
+        <Button
+            android:id="@+id/btn6"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_row="1"
+            android:layout_column="2"
+            android:layout_marginStart="10dp"
+            android:elevation="5dp"
+            android:fontFamily="@font/poppins_medium"
+            android:onClick="btnClick"
+            android:tag="12"
+            android:text="6"
+            android:textColor="@color/textColor"
+            android:textSize="45sp" />
+
+        <Button
+            android:id="@+id/btn7"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_row="2"
+            android:layout_column="0"
+            android:layout_marginEnd="10dp"
+            android:elevation="5dp"
+            android:fontFamily="@font/poppins_medium"
+            android:onClick="btnClick"
+            android:tag="20"
+            android:text="7"
+            android:textColor="@color/textColor"
+            android:textSize="45sp" />
+
+        <Button
+            android:id="@+id/btn8"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_row="2"
+            android:layout_column="1"
+            android:elevation="5dp"
+            android:fontFamily="@font/poppins_medium"
+            android:onClick="btnClick"
+            android:tag="21"
+            android:text="8"
+            android:textColor="@color/textColor"
+            android:textSize="45sp" />
+
+        <Button
+            android:id="@+id/btn0"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_row="2"
+            android:layout_column="2"
+            android:layout_marginStart="10dp"
+            android:elevation="5dp"
+            android:fontFamily="@font/poppins_medium"
+            android:onClick="btnClick"
+            android:tag="22"
+            android:text=""
+            android:textColor="@color/textColor"
+            android:textSize="45sp" />
+
+    </GridLayout>
+
+    <ImageView
+        android:id="@+id/shuffleBtn3"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        android:src="@drawable/shuffle"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        app:tint="@color/shuffleBtnColor" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
